--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  --main-background-1: #979797;
+  --main-background-1: whitesmoke;
   --main-background-2: #f65298;
 }
 
@@ -16,7 +16,7 @@ body {
 
 .app {
   min-height: 100vh;
-  background: linear-gradient(135deg, var(--main-background-1) 0%, var(--main-background-2) 100%);
+  background: linear-gradient(160deg, var(--main-background-1) 25%, var(--main-background-2) 100%);
   display: flex;
   align-items: center;
   justify-content: center;
